Update default PPP parallel settings

--- a/data/project/default_PPP/config/parallel_settings.ini
+++ b/data/project/default_PPP/config/parallel_settings.ini
@@ -2,7 +2,7 @@
 [SOFTWARE]
 #----------------------------------------------------------------------------------
 # goGPS config file
-version = "1.0 beta 3jp"
+version = "1.0 beta 4 ION"
 
 #----------------------------------------------------------------------------------
 [PARALLELISM]
@@ -129,7 +129,7 @@ vmf_dir = "../../reference/VMF/${YYYY}"
 # Try to download missing resources from the net (0 / 1)
 
 flag_download = 1
-# Preferred ephemeris type, valid only for source "igs",
+# Preferred ephemeris type,
 # accepted values: "final" "rapid" "ultra" "broadcast"
 preferred_eph = ["final" "rapid" "ultra"]
 # Preferred ionospheric type,
@@ -257,10 +257,12 @@ min_arc = 10
 flag_outlier = 1
 # Threshold on code LS estimation error [m]
 pp_spp_thr = 4
-# Threshold on maximum residual of code obs [m]
+# Threshold on maximum (pre-processing) residual of code obs [m]
 pp_max_code_err_thr = 5
+# Threshold on maximum residual of code obs [m]
+max_code_err_thr = 10
 # Threshold on maximum residual of phase obs [m]
-pp_max_phase_err_thr = 0.05
+max_phase_err_thr = 0.05
 
 #----------------------------------------------------------------------------------
 [PROCESSING]
@@ -268,6 +270,8 @@ pp_max_phase_err_thr = 0.05
 
 # Enable cycle slip repair (0/1) Experimental
 flag_repair = 0
+# Enable phase trackings combination
+flag_combine_trk = 1
 
 # Processing using weighting mode:
 w_mode = 1
@@ -286,6 +290,10 @@ ppp_reweight_mode = 9
 # 7: simple snooping
 # 8: smart snooping
 # 9: smart snooping + arc trim
+
+# Enable PPP on single frequency receiver
+# This should be used only when REMIONO or a good iono model is provided
+flag_ppp_force_single_freq = 0
 
 # PPP enable ambiguity fixing
 flag_ppp_amb_fix = 0
@@ -309,6 +317,9 @@ net_amb_fix_approach = 2
 flag_amb_pass = 0
 
 # Enable corrections
+# Enable re-alignment of satellite clocks (to compensate for discontinuities at the limits of validity)
+flag_clock_align = 1
+
 # Enable solid earth tide corrections
 flag_solid_earth = 1
 # Enable pole tide corrections
@@ -374,8 +385,12 @@ meteo_data = 3
 #----------------------------------------------------------------------------------
 [ADV ATMOSPHERE]
 #----------------------------------------------------------------------------------
+# Standard deviation of a priori tropospheric delay (default = 0.500)
+std_tropo_abs = 0.5
 # Standard deviation of tropospheric delay [m/h] (default = 0.0150)
 std_tropo = 0.015
+# Standard deviation of a priori tropospheric gradient (default = 0.020)
+std_tropo_gradient_abs = 0.02
 # Standard deviation of tropospheric gradient [m/h] (default = 0.0010)
 std_tropo_gradient = 0.001
 # Standard deviation of clock [m/h] (default = 0.0010)
@@ -444,10 +459,12 @@ flag_out_mf = 1
 #  - AZEL
 #  - BASICPP
 #  - PREPRO
+#  - FIXPOS
 #  - CODEPP
 #  - PPP
 #  - NET
 #  - SEID
+#  - SID
 #  - REMIONO
 #  - KEEP
 #  - SYNC
@@ -540,6 +557,16 @@ flag_out_mf = 1
 #                -s=<sat_list>      active constellations (e.g. -s=GRE)
 # 
 # ----------------------------------------------------------------------------------------------
+#  - FIXPOS    Fix position
+# 
+#              Mandatory receivers: T
+# 
+#              Parameters:
+#                FROM_WORK        (flag) use data from Work Space (current session)
+#                FROM_OUT         (flag) use data from Receiver Output object
+#                AS_APR           (flag) use position as a new a-priori position (not as fixed)
+# 
+# ----------------------------------------------------------------------------------------------
 #  - CODEPP    Code positioning
 # 
 #              Mandatory receivers: T
@@ -557,6 +584,7 @@ flag_out_mf = 1
 #                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
 #                -s=<sat_list>      active constellations (e.g. -s=GRE)
 #                --sync             use syncronized time only
+#                -u               (flag) use the new (experimental) uncombined engine
 # 
 # ----------------------------------------------------------------------------------------------
 #  - NET       Network solution using undifferenced carrier phase observations
@@ -567,15 +595,17 @@ flag_out_mf = 1
 #                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
 #                -s=<sat_list>      active constellations (e.g. -s=GRE)
 #                --sync             use syncronized time only
-#                COO_CRD            Coordinates Bernese .CRD file
-#                -iono              reduce for ionosphere delay
-#                -clk                export common paramter in network
+#                COO_CRD          Coordinates Bernese .CRD file
+#                --iono              reduce for ionosphere delay
+#                --clk                export common Parameter in network
 #                L<band>            band to be used for single frequency adjustment
-#                -free                let the network free
+#                --free                let the network free
+#                -u               (flag) use the new (experimental) uncombined engine
 # 
 # ----------------------------------------------------------------------------------------------
 #  - SEID      Generate a Synthesised L2 on a target receiver 
 #              using n (dual frequencies) reference stations
+#              SEID (Satellite specific Epoch differenced Ionospheric Delay model)
 # 
 #              Mandatory receivers: R, T
 # 
@@ -583,8 +613,17 @@ flag_out_mf = 1
 #                PLANE            (flag) use a plane for the interpolation of the geometry free
 # 
 # ----------------------------------------------------------------------------------------------
-#  - REMIONO   Remove ionosphere from observations on a target receiver 
+#  - SID       Generate a Synthesised L2 on a target receiver 
 #              using n (dual frequencies) reference stations
+#              SID (Satellite specific Ionospheric Delay model)
+#              New SEID approch based on a joint Least Squares estimation instead of time differenciation
+# 
+#              Mandatory receivers: R, T
+# 
+# ----------------------------------------------------------------------------------------------
+#  - REMIONO   Remove ionosphere from observations on a target receiver
+#              using n (dual frequencies) reference stations
+#              Sligthly different approach w.r.t. SEID
 # 
 #              Mandatory receivers: R, T
 # 
@@ -620,6 +659,9 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
+#                -s=<sat_list>      active constellations (e.g. -s=GRE)
+#                -e=<"name">       export with name_prefix
+#                -c                 close figure after export (valid only if export is present)
 #                DA               Data Availability
 #                ENU              East Nord Up positions
 #                ENUBSL           East Nord Up baseline
@@ -629,6 +671,7 @@ flag_out_mf = 1
 #                OCS              Outliers and cycle slips
 #                OCSP             Outliers and cycle slips (polar plot)
 #                RES              Residual plot
+#                RES_PSAT         Residuals per satellite
 #                RES_SKY          Residual sky plot
 #                RES_SKYP         Residual sky plot (polar plot)
 #                PTH              Pressure / Temperature / Humidity
@@ -645,10 +688,14 @@ flag_out_mf = 1
 # 
 #              Parameters:
 #                CORE_MAT         Save the core as .mat file
+#                PLAIN_MAT         Save the core as .mat file
 #                REC_MAT          Receiver object as .mat file
 #                REC_RIN          Rinex file containing the actual data stored in rec.work
+#                COO_CRD          Coordinates Bernese .CRD file
 #                TRP_SNX          Tropo parameters as SINEX file
-#                TRP_MAT          Tropo parameters matlab as .mat file
+#                TRP_MAT          Tropo parameters MATLAB as .mat file
+#                TRP_CSV          Tropo parameters MATLAB as .csv file
+#                TRP_HN          Tropo parameters as a hydroNet (CSV like) file
 # 
 # ----------------------------------------------------------------------------------------------
 #  - PUSHOUT   Push results in output
@@ -690,10 +737,7 @@ flag_out_mf = 1
 #              Mandatory session: S, T, P
 # 
 # ----------------------------------------------------------------------------------------------
-#  - ENDFOR    For loop end
-# 
-# ----------------------------------------------------------------------------------------------
-#  - ENDPAR    Parallel section end
+#  - END       For loop end or Parallel section end
 # 
 # ----------------------------------------------------------------------------------------------
 # 
