Update Default PPP settings (smoother tropo)

--- a/data/project/default_PPP/config/settings.ini
+++ b/data/project/default_PPP/config/settings.ini
@@ -2,7 +2,7 @@
 [SOFTWARE]
 #----------------------------------------------------------------------------------
 # goGPS config file
-version = "1.0 beta 3jp"
+version = "1.0 RC1"
 
 #----------------------------------------------------------------------------------
 [PARALLELISM]
@@ -129,7 +129,7 @@ vmf_dir = "../../reference/VMF/${YYYY}"
 # Try to download missing resources from the net (0 / 1)
 
 flag_download = 1
-# Preferred ephemeris type, valid only for source "igs",
+# Preferred ephemeris type,
 # accepted values: "final" "rapid" "ultra" "broadcast"
 preferred_eph = ["final" "rapid" "ultra"]
 # Preferred ionospheric type,
@@ -177,7 +177,7 @@ out_prefix = "zimm_PPP_${YYYY}_${DOY}/zimm_PPP"
 [ADV RECEIVERS]
 #----------------------------------------------------------------------------------
 # Default STD of code observations [m]
-std_code = 0.3
+std_code = 3
 # Default STD of phase observations [m]
 std_phase = 0.003
 # Default STD of iono-free phase observations [m
@@ -247,8 +247,11 @@ SBS_L5 = 0
 min_n_sat = 2
 # Cut-off [degrees]
 cut_off = 7
-# Signal-to-noise ratio threshold [dB]
-snr_thr = 0
+# Signal-to-noise ratio absolute threshold [dB]
+abs_snr_thr = 0
+# Signal-to-noise ratio scaled threshold [dB]
+# scaling is performet with respect to the code error level of the first frequency/tracking (usually 1C)
+scaled_snr_thr = 0
 # Minimum length an arc (a satellite to be used must be seen for a number of
 # consecutive epochs equal or greater than this value)
 min_arc = 10
@@ -256,11 +259,13 @@ min_arc = 10
 # Enable outlier detection (0/1)
 flag_outlier = 1
 # Threshold on code LS estimation error [m]
-pp_spp_thr = 4
+pp_spp_thr = 5
+# Threshold on maximum (pre-processing) residual of code obs [m]
+pp_max_code_err_thr = 40
 # Threshold on maximum residual of code obs [m]
-pp_max_code_err_thr = 5
+max_code_err_thr = 10
 # Threshold on maximum residual of phase obs [m]
-pp_max_phase_err_thr = 0.05
+max_phase_err_thr = 0.1
 
 #----------------------------------------------------------------------------------
 [PROCESSING]
@@ -268,6 +273,8 @@ pp_max_phase_err_thr = 0.05
 
 # Enable cycle slip repair (0/1) Experimental
 flag_repair = 0
+# Enable phase trackings combination
+flag_combine_trk = 1
 
 # Processing using weighting mode:
 w_mode = 1
@@ -286,6 +293,10 @@ ppp_reweight_mode = 9
 # 7: simple snooping
 # 8: smart snooping
 # 9: smart snooping + arc trim
+
+# Enable PPP on single frequency receiver
+# This should be used only when REMIONO or a good iono model is provided
+flag_ppp_force_single_freq = 0
 
 # PPP enable ambiguity fixing
 flag_ppp_amb_fix = 0
@@ -309,6 +320,9 @@ net_amb_fix_approach = 2
 flag_amb_pass = 0
 
 # Enable corrections
+# Enable re-alignment of satellite clocks (to compensate for discontinuities at the limits of validity)
+flag_clock_align = 1
+
 # Enable solid earth tide corrections
 flag_solid_earth = 1
 # Enable pole tide corrections
@@ -355,7 +369,7 @@ flag_tropo_gradient = 1
 flag_free_net_tropo = 0
 
 # A-priori zenith delay model
-zd_model = 1
+zd_model = 2
 #  1: Saastamoinen model
 #  2: Vienna Mapping Function gridded
 
@@ -366,7 +380,7 @@ mapping_function = 2
 #  3: Niell Mapping Function
 
 # Meteo data
-meteo_data = 3
+meteo_data = 2
 #  1: standard atmosphere
 #  2: Global Pressure Temperature Model
 #  3: MET file
@@ -374,16 +388,20 @@ meteo_data = 3
 #----------------------------------------------------------------------------------
 [ADV ATMOSPHERE]
 #----------------------------------------------------------------------------------
+# Standard deviation of a priori tropospheric delay (default = 0.500)
+std_tropo_abs = 0.5
 # Standard deviation of tropospheric delay [m/h] (default = 0.0150)
-std_tropo = 0.015
+std_tropo = 0.0015
+# Standard deviation of a priori tropospheric gradient (default = 0.020)
+std_tropo_gradient_abs = 0.02
 # Standard deviation of tropospheric gradient [m/h] (default = 0.0010)
-std_tropo_gradient = 0.001
+std_tropo_gradient = 0.0002
 # Standard deviation of clock [m/h] (default = 0.0010)
 std_clock = 1e+30
 # Spline rate tropospheric delay [s] (default = 300)
-spline_rate_tropo = 300
+spline_rate_tropo = 900
 # Spline rate tropospheric delay gradients [s] (default = 300)
-spline_rate_tropo_gradient = 300
+spline_rate_tropo_gradient = 1800
 # Spline order tropospheric delay [s] (default = 0)
 spline_tropo_order = 0
 # Spline order tropospheric delay gradients [s] (default = 0)
@@ -420,10 +438,16 @@ flag_out_pth = 1
 flag_out_ocs = 1
 # Keep satellite quality (snr)
 flag_out_quality = 1
+# Keep number of satellites per epoch
+flag_out_nspe = 1
 # Keep satellite azimuth and elevation
 flag_out_azel = 1
-# Keep satellite satellite residuals
-flag_out_res = 1
+# Keep combined residuals
+flag_out_res_co = 1
+# Keep uncombined code residuals
+flag_out_res_pr = 1
+# Keep uncombined phase residuals
+flag_out_res_ph = 1
 # Keep satellite mapping functions (wet / hydrostatic)
 flag_out_mf = 1
 
@@ -444,15 +468,18 @@ flag_out_mf = 1
 #  - AZEL
 #  - BASICPP
 #  - PREPRO
+#  - FIXPOS
 #  - CODEPP
 #  - PPP
 #  - NET
 #  - SEID
+#  - SID
 #  - REMIONO
 #  - KEEP
 #  - SYNC
 #  - OUTDET
 #  - SHOW
+#  - VALIDATE
 #  - EXPORT
 #  - PUSHOUT
 #  - REMSAT
@@ -487,8 +514,8 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                -s=<sat_list>      active constellations (e.g. -s=GRE)
-#                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
+#                -s=<sat_list>      Active constellations (e.g. -s=GRE)
+#                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
 # 
 # ----------------------------------------------------------------------------------------------
 #  - RENAME    Rename a receiver (change marker name)
@@ -526,8 +553,8 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
-#                -s=<sat_list>      active constellations (e.g. -s=GRE)
+#                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
+#                -s=<sat_list>      Active constellations (e.g. -s=GRE)
 # 
 # ----------------------------------------------------------------------------------------------
 #  - PREPRO    Code positioning, computation of satellite positions and various
@@ -536,8 +563,18 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
-#                -s=<sat_list>      active constellations (e.g. -s=GRE)
+#                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
+#                -s=<sat_list>      Active constellations (e.g. -s=GRE)
+# 
+# ----------------------------------------------------------------------------------------------
+#  - FIXPOS    Fix position
+# 
+#              Mandatory receivers: T
+# 
+#              Parameters:
+#                FROM_WORK          (flag) use data from Work Space (current session)
+#                FROM_OUT           (flag) use data from Receiver Output object
+#                AS_APR           (flag) use position as a new a-priori position (not as fixed)
 # 
 # ----------------------------------------------------------------------------------------------
 #  - CODEPP    Code positioning
@@ -545,8 +582,8 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
-#                -s=<sat_list>      active constellations (e.g. -s=GRE)
+#                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
+#                -s=<sat_list>      Active constellations (e.g. -s=GRE)
 # 
 # ----------------------------------------------------------------------------------------------
 #  - PPP       Precise Point Positioning using carrier phase observations
@@ -554,9 +591,10 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
-#                -s=<sat_list>      active constellations (e.g. -s=GRE)
-#                --sync             use syncronized time only
+#                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
+#                -s=<sat_list>      Active constellations (e.g. -s=GRE)
+#                --sync             Use syncronized time only
+#                -u                 (flag) use the uncombined engine
 # 
 # ----------------------------------------------------------------------------------------------
 #  - NET       Network solution using undifferenced carrier phase observations
@@ -564,27 +602,38 @@ flag_out_mf = 1
 #              Mandatory receivers: T, R
 # 
 #              Parameters:
-#                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
-#                -s=<sat_list>      active constellations (e.g. -s=GRE)
-#                --sync             use syncronized time only
-#                COO_CRD            Coordinates Bernese .CRD file
-#                -iono              reduce for ionosphere delay
-#                -clk                export common paramter in network
+#                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
+#                -s=<sat_list>      Active constellations (e.g. -s=GRE)
+#                --sync             Use syncronized time only
+#                COO_CRD            Coordinates .CRD file
+#                --iono             Reduce for ionosphere delay
+#                --clk              Export common Parameter in network
 #                L<band>            band to be used for single frequency adjustment
-#                -free                let the network free
+#                --free              Let the network free
+#                -u                 (flag) use the uncombined engine
 # 
 # ----------------------------------------------------------------------------------------------
 #  - SEID      Generate a Synthesised L2 on a target receiver 
 #              using n (dual frequencies) reference stations
+#              SEID (Satellite specific Epoch differenced Ionospheric Delay model)
 # 
 #              Mandatory receivers: R, T
 # 
 #              Parameters:
-#                PLANE            (flag) use a plane for the interpolation of the geometry free
+#                PLANE              (flag) use a plane for the interpolation of the geometry free
 # 
 # ----------------------------------------------------------------------------------------------
-#  - REMIONO   Remove ionosphere from observations on a target receiver 
+#  - SID       Generate a Synthesised L2 on a target receiver 
 #              using n (dual frequencies) reference stations
+#              SID (Satellite specific Ionospheric Delay model)
+#              New SEID approch based on a joint Least Squares estimation instead of time differenciation
+# 
+#              Mandatory receivers: R, T
+# 
+# ----------------------------------------------------------------------------------------------
+#  - REMIONO   Remove ionosphere from observations on a target receiver
+#              using n (dual frequencies) reference stations
+#              Sligthly different approach w.r.t. SEID
 # 
 #              Mandatory receivers: R, T
 # 
@@ -595,9 +644,9 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
-#                -s=<sat_list>      active constellations (e.g. -s=GRE)
-#                -e=<elevation>     elevation in degree (e.g. -e=7)
+#                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
+#                -s=<sat_list>      Active constellations (e.g. -s=GRE)
+#                -e=<elevation>     Elevation in degree (e.g. -e=7)
 #                -q=<snrthr>        SNR threshold in dbHZ on L1 (e.g. -q=7)
 # 
 # ----------------------------------------------------------------------------------------------
@@ -607,7 +656,7 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                @<rate>            processing rate in seconds (e.g. @30s, -r=30s)
+#                @<rate>            Processing rate in seconds (e.g. @30s, -r=30s)
 # 
 # ----------------------------------------------------------------------------------------------
 #  - OUTDET    Force outlier and cycle slip detection
@@ -620,23 +669,58 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                DA               Data Availability
-#                ENU              East Nord Up positions
-#                ENUBSL           East Nord Up baseline
-#                XYZ              XYZ Earth Fixed Earth centered positions
-#                CK               Clock errors
-#                SNR              Signal to Noise Ratio (polar plot)
-#                OCS              Outliers and cycle slips
-#                OCSP             Outliers and cycle slips (polar plot)
-#                RES              Residual plot
-#                RES_SKY          Residual sky plot
-#                RES_SKYP         Residual sky plot (polar plot)
-#                PTH              Pressure / Temperature / Humidity
-#                ZTD              Zenith Total Delay
-#                ZWD              Zenith Wet Delay
-#                PWV              Precipitable Water Vapour
-#                STD              Zenith Total Delay with slants
-#                RES_STD          Slants Total Delay residuals (polar plot)
+#                -s=<sat_list>      Active constellations (e.g. -s=GRE)
+#                -e=<"name">        Export with name_prefix
+#                -c                 Close figure after export (valid only if export is present)
+#                MAP                Map of station coordinates (Google Maps Background)
+#                L_MAP              Legacy map of station coordinates (Google Maps background)
+#                G_MAP              Map of station coordinates (Google Maps Background)
+#                DTM_MAP            Map of station coordinates (DTM background)
+#                G_MAP_R            Map of station coordinates (Google Maps Background) + RAOB
+#                DTM_MAP_R          Map of station coordinates (DTM background) + RAOB
+#                DA                 Data Availability
+#                ENU                East Nord Up positions
+#                PUP                Planar Up positions
+#                ENUBSL             East Nord Up baseline
+#                PUPBSL             Planar Up baseline
+#                XYZ                XYZ Earth Fixed Earth centered positions
+#                CKW                Clock errors of the last session
+#                CK                 Clock errors
+#                SNR                Signal to Noise Ratio (polar plot)
+#                SNRI               Signal to Noise Ratio (polar plot, interpolated map)
+#                OSTAT              Observation stats (last session)
+#                PSTAT              Processing stats (multi-session)
+#                OCS                Outliers and cycle slips
+#                OCSP               Outliers and cycle slips (polar plot)
+#                RES                Residual plot
+#                RES_(O|W)_COS      Output | Work-Space combined residuals
+#                RES_(O|W)_PRS      Output | Work-Space combined pseudo-range residuals
+#                RES_(O|W)_PHS      Output | Work-Space combined phase residuals
+#                RES_SKY            Residual sky plot
+#                RES_SKYP           Residual sky plot (polar plot)
+#                PTH                Pressure / Temperature / Humidity
+#                NSAT               Number of satellite used (multi-receiver)
+#                NSATSS             Number of satellite used (sys by sys)
+#                NSATSSS            Smoothed number of satellite used (sys by sys)
+#                ZTD                Zenith Total Delay
+#                ZTD_VSH            Zenith Total Delay vs Height
+#                ZHD                Zenith Hydrostatic Delay
+#                ZWD                Zenith Wet Delay
+#                ZWD_VSH            Zenith Wet Delay vs Height
+#                PWV                Precipitable Water Vapour
+#                STD                Zenith Total Delay with slants
+#                RES_STD            Slants Total Delay residuals (polar plot)
+# 
+# ----------------------------------------------------------------------------------------------
+#  - VALIDATE  Validate estimated parameter with external data
+# 
+#              Mandatory receivers: T
+# 
+#              Parameters:
+#                -e=<"name">        Export with name_prefix
+#                IGS                 Use IGS results for validation
+#                IGS_ZTD            Use IGS results for ZTD validation
+#                RAOB               Use RAOB for ZTD validation
 # 
 # ----------------------------------------------------------------------------------------------
 #  - EXPORT    Export
@@ -644,11 +728,18 @@ flag_out_mf = 1
 #              Mandatory receivers: T
 # 
 #              Parameters:
-#                CORE_MAT         Save the core as .mat file
-#                REC_MAT          Receiver object as .mat file
-#                REC_RIN          Rinex file containing the actual data stored in rec.work
-#                TRP_SNX          Tropo parameters as SINEX file
-#                TRP_MAT          Tropo parameters matlab as .mat file
+#                CORE_MAT           Save the core as .mat file
+#                PLAIN_MAT          Save the receiver as plain .mat files (no objects)
+#                REC_MAT            Receiver object as .mat file
+#                REC_RIN            Rinex file containing the actual data stored in rec.work
+#                COO_CRD            Coordinates .CRD file
+#                XYZ_TXT            Coordinates XYZ in plain text format
+#                ENU_TXT            Coordinates local ENU in plain text format
+#                GEO_TXT            Coordinates Geodetic in plain text format
+#                TRP_SNX            Tropo parameters as SINEX file
+#                TRP_MAT            Tropo parameters MATLAB as .mat file
+#                TRP_CSV            Tropo parameters MATLAB as .csv file
+#                TRP_HN             Tropo parameters as a hydroNet (CSV like) file
 # 
 # ----------------------------------------------------------------------------------------------
 #  - PUSHOUT   Push results in output
@@ -690,20 +781,18 @@ flag_out_mf = 1
 #              Mandatory session: S, T, P
 # 
 # ----------------------------------------------------------------------------------------------
-#  - ENDFOR    For loop end
-# 
-# ----------------------------------------------------------------------------------------------
-#  - ENDPAR    Parallel section end
+#  - END       For loop end or Parallel section end
 # 
 # ----------------------------------------------------------------------------------------------
 # 
 cmd_001 = "FOR S*"
 cmd_002 = "FOR T*"
 cmd_003 = "LOAD T$"
-cmd_004 = "PREPRO T$"
-cmd_005 = "PPP T$"
-cmd_006 = "ENDFOR"
-cmd_007 = "ENDFOR"
-cmd_008 = "SHOW T* ZTD"
-cmd_009 = "EXPORT T* TRP_SNX"
+cmd_004 = "REMSAT T$ G08"
+cmd_005 = "PREPRO T$"
+cmd_006 = "PPP T$"
+cmd_007 = "END"
+cmd_008 = "END"
+cmd_009 = "SHOW T* PWV"
+cmd_010 = "EXPORT T* TRP_SNX"
 
