Add resource to download ESA orbits from CDDIS (old orbits are there)

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -65,7 +65,7 @@ none = ""
 #***************************************************************************************************
 
 [CENTER]
-available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
+available = ["none" "GRECJI@mgex_broadcast" "G@default" "G@igs_legacy" "G@igs_gps" "R@igs_glo" "G@emr" "GR@esoc" "GR@esoc_cddis" "GRE@esoc_mgex" "GR@code_legacy" "GR@code" "GR@code1d" "GR@code5s" "GRECJ@code_mgex" "GRECJ@gfz" "GRJ@jaxa" "GR@cnes" "GRE@cnes_mgex" "GREC@wuhan" "G@jpl" "GR@bnc"]
 
 # DEFAULT ------------------------------------------------------------------------------------------
 
@@ -653,6 +653,33 @@ location = ["esa"]
 [f_esa_predicted2]
 filename = "esrg${DOY}0.${YY}i"
 location = ["esa"]
+
+# ESOC ---------------------------------------------------------------------------------------------
+
+[c_esoc_cddis]
+description = "Final European Space Operation Center ( ESOC ) from cddis"
+final = "esa_cddis_eph & ( esa_cddis_erp ) & ( esa_cddis_clk_30s )"
+final_latency = [132 276]
+broadcast = "dlrtum_broadcast"
+broadcast_latency = [0 9]
+iono_final = "code_ionex"
+iono_predicted1 =  "code_predicted1"
+iono_predicted2 = "code_predicted2"
+iono_broadcast = "code_iono_broadcast"
+atm_load = "tuw_atm_load_v04"
+vmf = "tuw_vmf | tuw_vmf_fc"
+
+[f_esa_cddis_eph]
+filename = "esa${WWWWD}.sp3"
+location = ["gps"]
+
+[f_esa_cddis_clk_30s]
+filename = "esa${WWWWD}.clk"
+location = ["gps"]
+
+[f_esa_cddis_erp]
+filename = "esa${WWWW}7.erp"
+location = ["gps"]
 
 # ESOC MGEX ----------------------------------------------------------------------------------------
 
