PPP fixing unsing undiffernced bias

--- a/goGPS/remote_resource.ini
+++ b/goGPS/remote_resource.ini
@@ -43,7 +43,7 @@ iono_brdc = "?{aiub}/CODE/${YYYY}/"
 
 brdc = "?{cddis}/gnss/data/daily/${YYYY}/brdc/"
 
-dcb = "?{ign}/pub/igs/products/mgex/dcb/${YYYY}/"
+bias = "?{ign}/pub/igs/products/mgex/dcb/${YYYY}/"
 dcb_bk = "?{cddis}/pub/gps/products/mgex/${WWWW}/"
 dcb_aiub = "?{aiub}/CODE/${YYYY}/"
 
@@ -113,6 +113,7 @@ ultra_latency = [0 9]
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_final = "code_ionex"
+bias = "code_mgex_bias"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 = "code_predicted2"
 iono_broadcast = "code_iono_broadcast"
@@ -230,7 +231,7 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-dcb = "code_dcb"
+bias = "code_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -243,7 +244,7 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-dcb = "code_dcb"
+bias = "code_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -256,7 +257,7 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-dcb = "code_dcb"
+bias = "code_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -269,7 +270,7 @@ final_latency = [168 312]
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-dcb = "code_dcb"
+bias = "code_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -331,6 +332,10 @@ location = "iono"
 filename = "c2pg${DOY}0.${YY}i"
 location = "iono"
 
+[f_code_bias]
+filename = "COD${WWWWD}.BIA"
+location = ["bias_aiub"]
+
 # CNES ---------------------------------------------------------------------------------------------
 
 [c_cnes]
@@ -340,7 +345,7 @@ final_latency = [168 312]
 iono_final = "cnes_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-dcb = "code_dcb"
+bias = "code_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -434,7 +439,7 @@ ultra = "( gfz_ultra_sp3 ) & ( gfz_ultra_erp  | null )"
 iono_final = "code_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-dcb = "code_dcb"
+bias = "code_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -498,7 +503,7 @@ location = ["mgex"]
 description = "Center for Orbit Determination Europe - MGEX"
 final = "code_mgex_eph & ( code_mgex_erp ) & ( code_mgex_clk_30s )"
 final_latency = [168 312]
-bias = "f_code_mgex_dcb"
+bias = "code_mgex_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 iono_final = "code_ionex"
@@ -520,7 +525,7 @@ location = ["mgex"]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_03D_12H_ERP.ERP"
 location = ["mgex"]
 
-[f_code_mgex_dcb]
+[f_code_mgex_bias]
 filename = "COD0MGXFIN_${YYYY}${DOY}0000_01D_01D_OSB.BIA"
 location = ["mgex"]
 
@@ -536,6 +541,7 @@ location = "iono"
 filename = "c2pg${DOY}0.${YY}i"
 location = "iono"
 
+
 # CNES MGEX ----------------------------------------------------------------------------------------
 
 [c_cnes_mgex]
@@ -545,7 +551,7 @@ final_latency = [168 312]
 iono_final = "cnes_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
-dcb = "code_dcb"
+bias = "code_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
@@ -749,7 +755,7 @@ iono_final = "whuan_ionex"
 iono_predicted1 =  "code_predicted1"
 iono_predicted2 =" code_predicted2"
 iono_broadcast = "code_iono_broadcast"
-dcb = "code_dcb"
+bias = "code_bias"
 broadcast = "dlrtum_broadcast"
 broadcast_latency = [0 9]
 atm_load = "tuw_atm_load_v04"
